--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "based on [figma](https://www.figma.com/file/L9D2lEQvqQcWQAkqr65k6a/Productly_landing_page?type=design&node-id=0%3A1&t=nPWCsred6i51ME1F-1) layout.",
   "main": "index.js",
   "scripts": {
-    "style": "sass --watch scss/style.scss scss/style.css",
+    "style": "sass --watch src/scss/style.scss src/scss/style.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
